--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   /* General light background */
   --medium-bg: #f5f5f5;
   /* Content area background */
-  --white-bg: #ffffff;
+  --white-bg: #f5f5f5;
   /* Card/form background */
   --border-color: #ddd;
   /* Light border color */
@@ -71,7 +71,7 @@ h3 {
 
 .sub-section {
   padding: 20px;
-  background: var(--white-bg);
+  background: skyblue;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
   margin-bottom: 30px;
@@ -270,7 +270,7 @@ form {
   flex-wrap: wrap;
   gap: 15px;
   padding: 20px;
-  background: var(--white-bg);
+  background:white;
   border-radius: 10px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   border: 1px solid var(--border-color);
@@ -347,7 +347,7 @@ ul {
 }
 
 ul li {
-  background: var(--white-bg);
+  background: rgb(201, 216, 222);
   margin-bottom: 10px;
   padding: 1rem;
   border-radius: 8px;
@@ -356,6 +356,7 @@ ul li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: black;
 }
 
 
